2006-02-09  Dalibor Topic  <robilad@kaffe.org>

	Fix for #15.

	* libraries/javalib/vmspecific/gnu/classpath/VMSystemProperties.java:
	Check if there is a file encoding specified in the locale, and set
	file.encoding property to it if it is.
 
2006-02-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/vmspecific/gnu/crypto/Properties.java,
	libraries/javalib/vmspecific/gnu/crypto/Registry.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/Assembly.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/Cascade.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/CascadeStage.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/CascadeTransformer.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/DeflateTransformer.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/Direction.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/LoopbackTransformer.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/ModeStage.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/Operation.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/PaddingTransformer.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/Stage.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/Transformer.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/TransformerException.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/package.html,
	libraries/javalib/vmspecific/gnu/crypto/auth/Password.java,
	libraries/javalib/vmspecific/gnu/crypto/auth/callback/AWTCallbackHandler.java,
	libraries/javalib/vmspecific/gnu/crypto/auth/callback/AbstractCallbackHandler.java,
	libraries/javalib/vmspecific/gnu/crypto/auth/callback/ConsoleCallbackHandler.java,
	libraries/javalib/vmspecific/gnu/crypto/auth/callback/DefaultCallbackHandler.java,
	libraries/javalib/vmspecific/gnu/crypto/auth/callback/Engine.java,
	libraries/javalib/vmspecific/gnu/crypto/auth/callback/GnuCallbacks.java,
	libraries/javalib/vmspecific/gnu/crypto/auth/callback/MessagesBundle.properties,